z order fix for cy instance (visible on iphone/safari)

--- a/documentation/css/style.css
+++ b/documentation/css/style.css
@@ -5,6 +5,7 @@ body {
 
 #cy {
 	position: fixed;
+	z-index: 99999;
 	right: 0;
 	bottom: 0;
 	height: 300px;
